      added second parameter to pass tables (if already fetched from db)
    * left.php: make use of new functionality in PMA_getTableList() and
      PMA_DBI_get_tables_full(): reduce db server traffic (MySQL >=5.0)
    * libraries/common.lib.php:
      removed aditional check for table row count for left frame tree
      (bug #1397061 Left frame not loaded correct on MySQL error)

2006-01-12 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: typo, thanks to Cédric Corazza
    * libraries/common.lib.php: remove high-ascii characters, and an
      assignment syntax that does not work on PHP 5.1.2
    * libraries/database_interface.lib.php: PHP 5.1.2 compatibility

2006-01-11 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php, libraries/sqlparser.lib.php: other fixes for bug #1394479

2006-01-11 Michal Čihař  <michal@cihar.com>
    * main.php: Do not fail if no server is defined.
    * main.php, libraries/left_header.inc.php,
      libraries/select_server.lib.php: Show server selection if no server set
      and we have one server configuration (bug #1399880).
    * libraries/import/sql.php: Fix hang on unclosed quoted string (bug
      #1402270).

2006-01-10 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug #1394479, problem detecting ending 
      semi-colon, generates a SHOW KEYS FROM no table name

2006-01-09 Michal Čihař  <michal@cihar.com>
    * import.php: Work on 10MB chunks if no memory limit is set (bug
      #1399477).

2006-01-07 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php: bug #1395590 Safari Bookmark query fieldset float problem,
      thanks to Ryan Schmidt
    * libraries/common.lib.php: bug #1397749, Safari: space before
      PMA_linkOrButton link is part of the link, thanks to Ryan Schmidt
    * server_privileges.php: bug #1398018, Safari fieldset float issue in
      privileges screens, thanks to Ryan Schmidt
    * libraries/Config.class.php: bug #1398931, incorrect detection of